--- a/index.html
+++ b/index.html
@@ -6,55 +6,58 @@
   <title>NailFlow</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    body { font-family: -apple-system, sans-serif; padding: 20px; background: #fff9fc; }
+    body { font-family: -apple-system, sans-serif; padding: 20px; background: #fff9fc; margin: 0; }
     .header { text-align: center; margin-bottom: 20px; }
-    .avatar { width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin: 0 auto; }
+    .avatar { width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin: 0 auto; background: #ff4d94; display: flex; align-items: center; justify-content: center; color: white; font-size: 40px; }
     .btn { 
-      display: block; width: 100%; padding: 14px; margin: 12px 0; 
-      background: #ff4d94; color: white; border: none; border-radius: 12px; 
-      font-size: 16px; cursor: pointer; 
+      display: block; width: 100%; padding: 16px; margin: 12px 0; 
+      background: #ff4d94; color: white; border: none; border-radius: 16px; 
+      font-size: 18px; font-weight: 600; cursor: pointer; 
     }
     .btn-outline { background: transparent; border: 2px solid #ff4d94; color: #ff4d94; }
-    .reviews { background: #fff; padding: 16px; border-radius: 12px; margin: 16px 0; }
+    .section { background: white; padding: 20px; border-radius: 16px; margin: 16px 0; }
+    .review { padding: 12px 0; border-bottom: 1px solid #eee; }
+    .review:last-child { border: none; }
   </style>
 </head>
 <body>
   <div class="header">
-    <img src="https://placehold.co/100x100/ff4d94/white?text=💅" class="avatar" alt="Мастер">
+    <div class="avatar">💅</div>
     <h1>Анна</h1>
     <p>мастер маникюра • 5 лет</p>
     <p>📍 Москва, м. Сокольники</p>
     <p>⭐️ 4.9 (27 отзывов)</p>
   </div>
 
-  <button class="btn" id="bookBtn">✨ Записаться в Telegram</button>
-  <button class="btn btn-outline" id="reviewsBtn">💬 Отзывы</button>
+  <button class="btn" id="bookBtn">✨ Записаться</button>
   <button class="btn btn-outline" id="priceBtn">💰 Прайс</button>
+  <button class="btn btn-outline" id="worksBtn">📸 Мои работы</button>
 
-  <div class="reviews" id="reviews" style="display:none;">
-    <h3>Отзывы</h3>
-    <p>«Супер! Делала 3 раза — всегда идеально» — Мария, 5⭐️</p>
-    <p>«Аня — волшебница! Спасибо за дизайн 💖» — Оля, 5⭐️</p>
+  <div class="section">
+    <h3>💬 Отзывы</h3>
+    <div class="review">«Супер! Делала 3 раза — всегда идеально» — Мария, 5⭐️</div>
+    <div class="review">«Аня — волшебница! Спасибо за дизайн 💖» — Оля, 5⭐️</div>
   </div>
 
   <script>
-    // Инициализация Telegram WebApp
     const tg = window.Telegram.WebApp;
-    tg.expand(); // разворачиваем на весь экран
+    tg.expand();
+    tg.setHeaderColor("#ff4d94");
+    tg.setBackgroundColor("#fff9fc");
 
-    // Кнопка "Записаться" → открывает бота
+    // 🔗 Открыть бота при нажатии "Записаться"
     document.getElementById('bookBtn').onclick = () => {
-      tg.openTelegramLink('https://t.me/nailflow_test_bot?start=from_miniapp');
+      tg.openTelegramLink('https://t.me/nailflow_test_bot?start=book_now');
     };
 
-    // Показ отзывов
-    document.getElementById('reviewsBtn').onclick = () => {
-      document.getElementById('reviews').style.display = 'block';
-    };
-
-    // Прайс (можно сделать popup или отдельную страницу)
+    // 💰 Прайс
     document.getElementById('priceBtn').onclick = () => {
       alert('💅 Классический — 1500₽\n💅+покрытие — 2000₽\n💅 Дизайн — от 500₽');
+    };
+
+    // 📸 Работы (можно расширить)
+    document.getElementById('worksBtn').onclick = () => {
+      alert('📸 Галерея в разработке! А пока — смотрите отзывы 😊');
     };
   </script>
 </body>
